--- a/OrderService/pom.xml
+++ b/OrderService/pom.xml
@@ -27,6 +27,7 @@
 		<junit.version>4.12</junit.version>
 		<jacoco-maven-plugin-version>0.8.2</jacoco-maven-plugin-version>
 		<surefire.plugin.version>2.22.0</surefire.plugin.version>
+		<surefire-junit47-version>2.22.0</surefire-junit47-version>
 		<failsafe.plugin.version>2.22.0</failsafe.plugin.version>
 		<sonar.plugin.version>0.8.2</sonar.plugin.version>
 	</properties>
@@ -91,17 +92,23 @@
 	<build>
 		<plugins>
 		
+		
 		 	<plugin>
   				<groupId>org.apache.maven.plugins</groupId>
   				<artifactId>maven-surefire-plugin</artifactId>
   				<version>${surefire.plugin.version}</version>
   				<configuration>
-  					<argLine>${surefireArgLine}</argLine>
-  					<suiteXmlFiles>
-  						<suitXmlFile>src/test/resources/testng/unit-testng.xml</suitXmlFile>
-  					</suiteXmlFiles>
+  				  <argLine>${surefireArgLine}</argLine>
   				</configuration>
+  				<dependencies>
+  					<dependency>
+  						<groupId>org.apache.maven.surefire</groupId>
+  						<artifactId>surefire-junit47</artifactId>
+  						<version>${surefire-junit47-version}</version>
+  					</dependency>
+  				</dependencies>
   			</plugin>
+		
   			
 		 	<plugin>
   				<groupId>org.apache.maven.plugins</groupId>
@@ -146,7 +153,7 @@
 			      </goals>
 			      <configuration>
 			        <dataFile>${project.basedir}/target/coverage-reports/jacoco.exec</dataFile>
-		            <propertyName>${project.basedir}/target/site/jacoco-ut</propertyName>
+			        <outputDirectory>${project.basedir}/target/site/jacoco-ut</outputDirectory>
 			      </configuration>
 		        </execution>
 		        
@@ -170,7 +177,7 @@
 		          </goals>
 		          <configuration>
 		            <dataFile>${project.basedir}/target/coverage-reports/jacoco-it.exec</dataFile>
-		            <propertyName>${project.basedir}/target/site/jacoco-it</propertyName>
+		            <outputDirectory>${project.basedir}/target/site/jacoco-it</outputDirectory>
 		          </configuration>   
 		        </execution>		  
 		        		        
