--- a/ProductService/pom.xml
+++ b/ProductService/pom.xml
@@ -27,6 +27,7 @@
 		<junit.version>4.12</junit.version>
 		<jacoco-maven-plugin-version>0.8.2</jacoco-maven-plugin-version>
 		<surefire.plugin.version>2.22.0</surefire.plugin.version>
+		<surefire-junit47-version>2.22.0</surefire-junit47-version>
 		<failsafe.plugin.version>2.22.0</failsafe.plugin.version>
 		<sonar.plugin.version>0.8.2</sonar.plugin.version>
 	</properties>
@@ -95,6 +96,16 @@
   				<groupId>org.apache.maven.plugins</groupId>
   				<artifactId>maven-surefire-plugin</artifactId>
   				<version>${surefire.plugin.version}</version>
+  				<configuration>
+  				  <argLine>${surefireArgLine}</argLine>
+  				</configuration>
+  				<dependencies>
+  					<dependency>
+  						<groupId>org.apache.maven.surefire</groupId>
+  						<artifactId>surefire-junit47</artifactId>
+  						<version>${surefire-junit47-version}</version>
+  					</dependency>
+  				</dependencies>
   			</plugin>
   			
 		 	<plugin>
@@ -140,7 +151,7 @@
 			      </goals>
 			      <configuration>
 			        <dataFile>${project.basedir}/target/coverage-reports/jacoco.exec</dataFile>
-		            <propertyName>${project.basedir}/target/site/jacoco-ut</propertyName>
+		            <outputDirectory>${project.basedir}/target/site/jacoco-ut</outputDirectory>
 			      </configuration>
 		        </execution>
 		        
@@ -164,7 +175,7 @@
 		          </goals>
 		          <configuration>
 		            <dataFile>${project.basedir}/target/coverage-reports/jacoco-it.exec</dataFile>
-		            <propertyName>${project.basedir}/target/site/jacoco-it</propertyName>
+		            <outputDirectory>${project.basedir}/target/site/jacoco-it</outputDirectory>
 		          </configuration>   
 		        </execution>		  
 		        		        
